name:                searchable
version:             0.1
description:         Traverse over structure with Alternative behaviour
homepage:            https://github.com/iokasimov/searchable
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            Data
build-type:          Simple
cabal-version:       >= 1.2

source-repository head
  type: git
  location: https://github.com/iokasimov/searchable.git

library
  exposed-modules:     Data.Searchable
  build-depends:       base == 4.*
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
